--- a/FullPage/index.html
+++ b/FullPage/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <link rel="stylesheet" href="./main.css">
+</head>
+<body>
+  <div id="fullPage_wrap">
+    <div class="fullPage_item w1"></div>
+    <div class="fullPage_item w2"></div>
+    <div class="fullPage_item w3"></div>
+    <div class="fullPage_item w4"></div>
+    <div class="fullPage_item w5"></div>
+    <div class="fullPage_item w6"></div>
+  </div>
 
+  <script src="./main.js"></script>
+</body>
+</html>
